@@ -1,3 +1,11 @@
+2006-09-16  Benoît Dejean  <benoit@placenet.org>
+
+	* src/procman.c: (procman_save_tree_state):
+	* src/procman_gksu.c: (procman_gksu_create_root_password_dialog):
+	
+	s/g_error/g_critical/.
+	Closes #356111.
+
 2006-09-11  Benoît Dejean  <benoit@placenet.org>
 
 	* configure.in:
